--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,4 +1,11 @@
 .header {
   width: 100%;
   height: 70px;
+  margin-left: 40px;
+  margin-top: 20px;
+
+  @media screen and (max-width: 900px) {
+    margin-left: 15px;
+    margin-top: 10px;
+  }
 }
